@@ -966,6 +966,7 @@ Other memory:
 	* Added /dev/zero
 	* 'errno' is now defined to be *get_errno_ptr() with no name conflicts
 	* Added lseek() and fseek()
+	* Integrated pascal test case on the simulation platform.  Needs pascal-0.1.1.
 </pre></ul>
 
 <table width ="100%">
